--- a/.github/workflows/main_labaml2.yml
+++ b/.github/workflows/main_labaml2.yml
@@ -51,7 +51,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'labaml2'
-          slot-name: 'test'
+          app-name: 'labaml2/test'
+          slot-name: 'labaml2-test'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_C689E0B8EC5342D1A3FA9AA9186901C1 }}
           package: .
